# horovod

./: CMakeLists.txt  Dockerfile  Dockerfile.test.gpu  Dockerfile_qhorovod.test.gpu  README.md  README.rst  setup.py
cmake/Modules/: FindNCCL.cmake
examples/: horovod_cifar.py  pytorch_imagenet_resnet50.py  pytorch_mnist.py  pytorch_synthetic_benchmark.py  pytorch_synthetic_benchmark_broken.py  pytorch_synthetic_benchmark_cross.py  run_aqsgd.sh  tensorflow_mnist.py
examples/aqsgd/: args.py  gestim.py  gvar.py  nuq.py  qlevels.py  quantize.py
examples/benchmarks/: pytorch_synthetic_benchmark.py
examples/models/: __init__.py  resnet_pwsgd.py
horovod/common/: __init__.py  basics.py  common.cc  common.h  compressor.cc  compressor.h  controller.cc  controller.h  fusion_buffer_manager.cc  global_state.h  hashes.h  operations.cc  operations.h  utils.cc  utils.h
horovod/common/compression/: compressor.cc  compressor.h  error_feedback.cc  error_feedback.h  feedback_buffer_manager.cc  feedback_buffer_manager.h
horovod/common/ops/: collective_operations.cc  collective_operations.h  cuda_functions.cu.cc  cuda_functions.h  cuda_operations.cc  cuda_operations.h  gpu_context_impl.cc  gpu_operations.cc  gpu_operations.h  hip_operations.cc  mpi_cuda_operations.cc  mpi_operations.cc  mpi_operations.h  mpi_quantized_cuda_operations.cc  mpi_quantized_cuda_operations.cc.new  mpi_quantized_cuda_operations.h  nccl_operations.cc  nccl_operations.h  operation_manager.cc  operation_manager.h  quantization.cc  quantization.h
horovod/common/ops/compressed/: common.cc  common.h  mpi_compressed_operations.cc  mpi_compressed_operations.h  mpi_gpu_compressed_operations.cc  mpi_gpu_compressed_operations.h  nccl_compressed_operations.cc  nccl_compressed_operations.h  utils.cc  utils.h
horovod/common/ops/compressed/compression/: compressor.cc  compressor.h  error_feedback.cc  error_feedback.h  feedback_buffer_manager.cc  feedback_buffer_manager.h  gpu_compressor.cc  gpu_compressor.h  vector_operations.cc  vector_operations.h
horovod/common/ops/compressed/compression/gpu/: CMakeLists.txt  compression_functions.cc  compression_functions.h  cuda_arithmetic_functions.cu  cuda_arithmetic_functions.h  cuda_compression_functions.cu  cuda_compression_functions.h  cuda_rand.h  cuda_topk_compression.cu  fp16_util.h  gpu_def.h  hip_compression_functions.cpp  hip_compression_functions.h  rand_util.h
horovod/common/ops/compressed/reducers/: all_broadcast.cc  all_broadcast.h  comm.h  common.h  mpi_allgather.cc  mpi_allgather.h  mpi_ps.cc  mpi_ps.h  mpi_ring.cc  mpi_ring.h  mpi_scatter_allgather.cc  mpi_scatter_allgather.h  mpi_tree.cc  mpi_tree.h  nccl_allgather.cc  nccl_allgather.h  nccl_ring.cc  nccl_ring.h  nccl_scatter_allgather.cc  nccl_scatter_allgather.h  p2p_comm.cc  p2p_comm.h  reducer.h  ring.cc  ring.h  scatter_allgather.cc  scatter_allgather.h  shm_ring.cc  shm_ring.h  shm_scatter_allgather.cc  shm_scatter_allgather.h  shm_tree.cc  shm_tree.h  shm_utils.cc  shm_utils.h
horovod/common/ops/reducers/: all_broadcast.cc  all_broadcast.h  compressed_reducer.cc  compressed_reducer.h  ring.cc  ring.h  scatter_allgather.cc  scatter_allgather.h
horovod/common/utils/: env_parser.h
horovod/run/: run.py
horovod/run/common/util/: config_parser.py
horovod/runner/: __init__.py  launch.py
horovod/runner/common/util/: config_parser.py
horovod/tensorflow/: __init__.py  mpi_ops.py
horovod/tensorflow/keras/: __init__.py
horovod/torch/: __init__.py  broken_barrier.py  broken_barrier_new.py  compression.py  cross_barrier.py  functions.py  interface.h  mpi_ops.cc  mpi_ops.h  mpi_ops.py  mpi_ops_v2.cc  optimizer.py  ready_event.cc
scripts/: run.sh  run_local_remote.sh  run_models.py
test/: hvd_allreduce.py  test_stall.py
test/cuda/: Makefile  common.h  compression_utils.cc  compression_utils.h  cuda_def.h  cuda_functions.h  cuda_functions_util.h  cuda_quan_test.cu  cuda_rand.h  cuda_vector_operations.h  memcpy.cu  nccl_allreduce.cc  old_cuda_functions.cu  quantization_test.cu  reductions.cc  reductions.h  shared_memory.cu.cc  shared_memory.h  shm.h  topk_test.cu
test/data/: config_compress.test.yaml
(+11 files in other folders)
